k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeservice
spec:
  selector:
    app: nodeserver
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
