k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeingress
spec:
  tls:
    - secretName: secret-tls
  rules:
    - http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: nodeservice
               port:
                 number: 80
